<resources>
    <string name="app_name">FoodMania</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign">SIGN IN</string>
    <string name="account">Don\'t have an account?</string>
    <string name="account2">Create new one</string>
    <string name="account3">Already have an account?</string>
    <string name="email">e-mail</string>
    <string name="pass">password</string>
    <string name="signup">SIGN UP</string>
    <string name="name">Name</string>
    <string name="cpass">confirm password</string>
    <string name="home">Home</string>
    <string name="searchFood">Search Food</string>
    <string name="myBasket">My Basket</string>
    <string name="others">Others</string>
    <string name="addToBasket">Add to Cart</string>
    <string name="splash">splash screen</string>
    <string name="reset">FORGOT MY PASSWORD</string>
    <string name="reset2">RESET</string>
    <string name="reset3">Forgot my password</string>
    <string name="required">Email is required</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="logout">Log Out</string>
    <string name="myReserva">My Reservation</string>
    <string name="english">English</string>
    <string name="turkish">Turkish</string>
    <string name="change_lang">Change Language</string>
    <string name="popular">POPULAR</string>
    <string name="campaigns">CAMPAIGNS</string>
    <string name="food">food</string>
    <string name="night">Night Mode</string>
    <string name="welcome">Welcome</string>
    <string name="secondfragment">Second Fragment</string>
    <string name="thirdfragment">Third Fragment</string>
    <string name="selectDate">Select Date</string>
    <string name="selectTime">Select Time</string>
    <string name="numberOfPeople">Number of People</string>
    <string name="makeReservation">Make Reservation</string>
    <string name="reservation">RESERVATION</string>
    <string name="favorites">My Favorites</string>
    <string name="orders">My Orders</string>
    <string name="search2">Search Food…</string>
    <string name="buy">Buy the</string>
    <string name="foodLove">Food that you love</string>
    <string name="categori">Categories</string>
    <string name="chooseFood">Choose Food</string>
</resources>