<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_nav"
    app:startDestination="@id/Home">

    <fragment
        android:id="@+id/Home"
        android:name="com.murates.durumcumuratusta.firstFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_first" />
    <fragment
        android:id="@+id/Search"
        android:name="com.murates.durumcumuratusta.secondFragment"
        android:label="@string/searchFood"
        tools:layout="@layout/fragment_second" />
    <fragment
        android:id="@+id/Basket"
        android:name="com.murates.durumcumuratusta.ThirdFragment"
        android:label="@string/myBasket"
        tools:layout="@layout/fragment_third" />
    <fragment
        android:id="@+id/Others"
        android:name="com.murates.durumcumuratusta.fourthFragment"
        android:label="@string/others"
        tools:layout="@layout/fragment_fourth" />
</navigation>