<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".secondFragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:padding="20dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/searchbtn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="19dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/ic_search"
                    app:layout_constraintBottom_toBottomOf="@+id/searc_bar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.126"
                    app:layout_constraintStart_toEndOf="@+id/searc_bar"
                    app:layout_constraintTop_toTopOf="@id/searc_bar"
                    app:layout_constraintVertical_bias="0.5" />

                <AutoCompleteTextView
                    android:id="@+id/searc_bar"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/search_shape"
                    android:elevation="4dp"
                    android:hint="@string/searchFood"
                    android:paddingLeft="20dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="10dp"
                    android:textSize="14dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.227"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.089"
                    app:layout_constraintWidth_percent="0.7" />
            </LinearLayout>


           <ListView
               android:id="@+id/listSearch"
               android:layout_width="match_parent"
               android:layout_height="match_parent"/>


            <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/buy"
        android:textColor="@color/textBlack"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searc_bar" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/foodLove"
                android:textColor="@color/textBlack"
                android:textSize="17dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />



    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/categori"
        android:textColor="@color/textBlack"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/chooseFood"
        android:textColor="@color/textBlack"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/recycler_categories"
        app:layout_constraintTop_toBottomOf="@+id/recycler_categories" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_food"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />



        </LinearLayout>

    </ScrollView>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>